--- a/企業検索システム/要求定義_システム要件.md
+++ b/企業検索システム/要求定義_システム要件.md
@@ -3,10 +3,9 @@
 
  | 作成者 | 作成日  | 更新者 | 更新日 |
  | ------ | ------ | -------- | -------- |
- | 盛岡太郎    | 2022/04/01   |      |      |      |
+ | 盛岡太郎    | 2022/04/01   |      |      |  
 
 - プロジェクト名：取引先企業検索システム 
-- ソフトウェア名：○○○○○○○○○○○○○ 
 
  --- 
 ## 1. システム概要
@@ -38,68 +37,16 @@
    UC006-2:県より検索する
    UC006-3:業種より検索する
 
-  
-
-
-#### ソフトウェア構成
-    ○○○○○○○○○○○○○○○○○○ 
-    ○○○○○○○○○○○○○○○○○○ 
-    ○○○○○○○○○○○○○○○○○○ 
-
-#### ハードウェアの構成
-    ○○○○○○○○○○○○○○○○○○ 
-    ○○○○○○○○○○○○○○○○○○ 
-    ○○○○○○○○○○○○○○○○○○ 
-
-#### ネットワークの構成
-    ○○○○○○○○○○○○○○○○○○ 
-    ○○○○○○○○○○○○○○○○○○ 
-    ○○○○○○○○○○○○○○○○○○ 
-
-#### 実行環境
-    ○○○○○○○○○○○○○○○○○○ 
-    ○○○○○○○○○○○○○○○○○○ 
-    ○○○○○○○○○○○○○○○○○○ 
-
- --- 
 ### 1-4. 要求一覧
-> ※指示）アプリケーションに求められる要件を、大分類、小分類、要件、優先度、備考等に分けて表形式で記述する
-  
+| 大分類 | 小分類 | 要件 | 優先度 | 備考 |
+| ----| ---- | ---- | ---- | ---- |
+| 基本要件 | 利用環境 |サービスの利用にあたって、クライアント端末にアプリケーションをインストールすることなくブラウザから利用できる|高|  |
+||ユーザ管理|ユーザIDとパスワードを用いたログインができる|高||
+||デザイン|サイト全体として、統一されたページデザインにすること|中||
+|検索要件 |所在県検索|指定した所在県より抽出が出来る|高|複合条件でも検索可能とする|
+||業種検索|指定した業種より抽出が出来る|高|複合条件でも検索可能とする|
+||条件無し|すべての企業を抽出できる|高|複合条件でも検索可能とする|
+| 企業情報登録 | 企業情報登録 |管理画面から企業情報を登録することが出来る| 高|  |
+| 企業情報保守 |企業情報編集|管理画面から企業情報を編集することが出来る|高|  |
+| 企業情報保守 |企業情報削除|管理画面から企業情報を削除することが出来る|高|  |
 
- --- 
-#### 1-5. 開発スケジュール
-> ※指示）10月末の検収日としてスケジュールを設定してください。
-> 図表は、**Mermaid**または**PlantUML**により作成してください。
-> 「**Markdown Preview Mermaid Support**」「**Markdown Preview Enhanced**」をインストールするとよい。
->(参考URL)  
->[GitHub で Mermaid がサポートされました](https://zenn.dev/yasuhiroki/articles/dd0feae790ba41)  
->[PlantUMLでガントチャート](https://plantuml.com/ja-dark/gantt-diagram)
-
- | No             | タスク名      | 開始日  | 内容    |
- | -------------- | ------------- | ------- | ------- |
- | YYYY年MM月DD日 | ○○○○○○○○○○○○○ | ○○○○○○○ | ○○○○○○○ |
- | YYYY年MM月DD日 | ○○○○○○○○○○○○○ | ○○○○○○○ | ○○○○○○○ |
- | YYYY年MM月DD日 | ○○○○○○○○○○○○○ | ○○○○○○○ | ○○○○○○○ |
- | YYYY年MM月DD日 | ○○○○○○○○○○○○○ | ○○○○○○○ | ○○○○○○○ |
-
-###### marmaidで記載した例
-
-```mermaid
-gantt
-    title ガントチャート
-    section 画面レイアウト
-    佐藤 :a, 2017-07-20, 2w
-    高橋 :crit, b, 2017-07-23, 10d
-    section 機能一覧
-    井上 :active, c, after b a, 15d
-```
-
-#### 1-6. 担当表
-> ※指示）4名の開発要員で構成してください。
-
-    ○○○○○○○○○○○○○○○○○○ 
-    ○○○○○○○○○○○○○○○○○○ 
-    ○○○○○○○○○○○○○○○○○○ 
-
-
- --- 
